CI: another fixup for s6rc graph generation

--- a/.github/workflows/s6rc-deps.yml
+++ b/.github/workflows/s6rc-deps.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Render dot graph
         run: |
+          sudo dot -c
           dot -Tsvg -o s6rc.svg s6rc.dot
 
       - name: Archive s6rc.svg
